# AlgebraCalc

./: AlgebraicGod.pro  CMakeLists.txt  main.cpp
include/: book.h  cursors.h  mybutton.h  plusminus.h
include/matrix/: matrix.hpp  matrixcalc.hpp  matrixedit.hpp  matrixlayout.hpp
src/: book.cpp  cursors.cpp  mybutton.cpp  plusminus.cpp
src/matrix/: matrix.cpp  matrixcalc.cpp  matrixedit.cpp  matrixlayout.cpp
